# argo-openai-proxy

./: .gitignore  Dockerfile  Makefile  README.md  app.py  chat.py  completions.py  compose.yaml  config.sample.yaml  config.yaml  embed.py  io-example.txt  o1-example.py  pyproject.toml  requirements.txt  run_app.sh  timeout_examples.md
argoproxy/: app.py  chat.py  cli.py  completions.py  config.py  constants.py  embed.py  extras.py  utils.py
dev_scripts/: openai_chat_completions_example_stream.py  release_to_gitlab.sh  test_embedding.py  test_resolve_name.py  test_tiktoken.py
dev_scripts/results_compare/: my_chunk
dev_scripts/test/: test.py  test2.sh
examples/: chat_completions_example.py  chat_example.py  chat_example_stream.py  completions_example.py  embedding_http_example.py  embedding_openai_example.py  o1-example-chat.py  o1-example.py  o1_chat_example_pyclient.py  o3_chat_example_pyclient.py  openai_chat_completions_example_stream.py  openai_completions_example_stream.py  openai_o1_chat_example.py  problematic_prompt_for_o1
examples/openai_client/: chat_completions.py  chat_completions_stream.py  chat_stream.py  embedding.py  legacy_completions.py  legacy_completions_stream.py  o3_chat_example_pyclient.py  responses.py  responses_stream.py
examples/raw_requests/: argo_chat.py  argo_chat_stream.py  argo_embed.py  chat_completions.py  chat_completions_stream.py  embedding.py  legacy_completions.py  o1_chat_example.py  (+4 more)
src/: chat.py  completions.py  embed.py
test/: chat_example.py  embedding_example.py  o1-example.py  test-o1-chat.py  test.sh  test2.py
(+38 files in other folders)
